--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fipugram",
+  "name": "vuegram",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^8.1.2",
+    "moment": "^2.29.4",
     "vue": "^3.2.13",
+    "vue-croppa": "^1.3.8",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
